endpoint to list messages is working
