# src/controllers/sample.ts
@@ -1,16 +1,0 @@
-import {Get, Route} from "tsoa";
-
-interface HolaMundoResponse {
-    message: string;
-}
-
-@Route("hola-mundo")
-export default class SampleController {
-    @Get("/")
-    public async holaMundo(): Promise<HolaMundoResponse> {
-        return {
-            message: "hola mundo",
-        };
-    }
-}
-
